--- a/src/components/Team/Team.module.scss
+++ b/src/components/Team/Team.module.scss
@@ -14,7 +14,6 @@
   height: $match-container-height;
   position: relative;
   overflow: hidden;
-  z-index: 1;
 
   &Left {
     @extend .container;
