--- a/src/styling/alignments.scss
+++ b/src/styling/alignments.scss
@@ -1,6 +1,7 @@
 $border-radius: 16px;
 $transition-time: 0.4s;
 $hidden-z: -1;
+$absolute-visible: 1;
 $always-on-top: 10;
 $match-container-height: 60px;
 $clock-width: 54px;
